@@ -57,7 +57,7 @@
 #define PATH_SEP '\\'
 
 #if defined( __WIN64__ )
-#define ARCH_STRING "x86_64"
+#define ARCH_STRING "AMD64"
 #endif
 
 #define Q3_LITTLE_ENDIAN
@@ -121,7 +121,7 @@
 #define PATH_SEP '/'
 
 #if defined __x86_64__
-#define ARCH_STRING "x86_64"
+#define ARCH_STRING "AMD64"
 #elif defined __arm__
 #define ARCH_STRING "arm"
 #endif
@@ -168,9 +168,9 @@
 #define PATH_SEP '/'
 
 #if defined __amd64__
-#define ARCH_STRING "x86_64"
+#define ARCH_STRING "AMD564"
 #elif defined __x86_64__
-#define ARCH_STRING "x86_64"
+#define ARCH_STRING "AMD64"
 #endif
 
 #if BYTE_ORDER == BIG_ENDIAN
