@@ -1,3 +1,6 @@
+2022-05-10 Dusan Jocic <dusanjocic@msn.com>
+	* [Engine] Fixed compiling on the Windows platform
+	
 2022-05-08 Dusan Jocic <dusanjocic@msn.com>
 	* [cMake] Updated CMakeLists.txt
 	* [Authentication Server] Fixed compiling Authentication server on the MacOS platform
